tests/expectations/compiler/futures/future_not_all_awaited_fail.out
Error [ESAZ0374001]: The following Finals were never run: f4
    --> compiler-test:18:1
     |
  18 | final fn finalize_foo(f0: Final, f1: Final, f2: Final, f3: Final, f4: Final, f5: Final) {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  19 |     f1.run();
     |     ^^^^^^^^^
  20 |     f2.run();
     |     ^^^^^^^^^
  21 |     f3.run();
     |     ^^^^^^^^^
  22 |     f0.run();
     |     ^^^^^^^^^
  23 |     f5.run();
     |     ^^^^^^^^^
  24 | }
     | ^
     |
     = Ex: for `f: Final` call `f.run()` to run a Final.
Warning [WSAZ0374003]: The Final `f1` is not run in the order in which they were passed in to the function.
    --> compiler-test:19:5
     |
  19 |     f1.run();
     |     ^^
     |
     = While it is not required for futures to be run in order, there is some specific behavior that arises, which may affect the semantics of your program. See `https://github.com/AleoNet/snarkVM/issues/2570` for more context.
Warning [WSAZ0374003]: The Final `f2` is not run in the order in which they were passed in to the function.
    --> compiler-test:20:5
     |
  20 |     f2.run();
     |     ^^
     |
     = While it is not required for futures to be run in order, there is some specific behavior that arises, which may affect the semantics of your program. See `https://github.com/AleoNet/snarkVM/issues/2570` for more context.
Warning [WSAZ0374003]: The Final `f3` is not run in the order in which they were passed in to the function.
    --> compiler-test:21:5
     |
  21 |     f3.run();
     |     ^^
     |
     = While it is not required for futures to be run in order, there is some specific behavior that arises, which may affect the semantics of your program. See `https://github.com/AleoNet/snarkVM/issues/2570` for more context.
Warning [WSAZ0374003]: The Final `f5` is not run in the order in which they were passed in to the function.
    --> compiler-test:23:5
     |
  23 |     f5.run();
     |     ^^
     |
     = While it is not required for futures to be run in order, there is some specific behavior that arises, which may affect the semantics of your program. See `https://github.com/AleoNet/snarkVM/issues/2570` for more context.
